--- a/Serein/WPF/Windows/Pages/Home.xaml
+++ b/Serein/WPF/Windows/Pages/Home.xaml
@@ -145,36 +145,20 @@
                 Grid.Column="1"
                 Margin="5"
                 Click="CardAction_Click"
-                Icon="Bot24"
-                Tag="Bot">
+                Icon="WindowConsole20"
+                Tag="Console">
                 <StackPanel>
                     <TextBlock
                         FontSize="13"
                         FontWeight="Medium"
-                        Text="连接机器人" />
+                        Text="服务器终端" />
                     <TextBlock
                         FontSize="12"
                         Foreground="{DynamicResource TextFillColorTertiaryBrush}"
-                        Text="连接WS正向服务器" />
+                        Text="查看服务器终端" />
                 </StackPanel>
             </ui:CardAction>
-            <ui:CardAction
-                Grid.Column="2"
-                Margin="5"
-                Click="CardAction_Click"
-                Icon="TextBulletListSquare24"
-                Tag="Regex">
-                <StackPanel>
-                    <TextBlock
-                        FontSize="13"
-                        FontWeight="Medium"
-                        Text="管理正则" />
-                    <TextBlock
-                        FontSize="12"
-                        Foreground="{DynamicResource TextFillColorTertiaryBrush}"
-                        Text="设定正则表达式处理消息" />
-                </StackPanel>
-            </ui:CardAction>
+            
             <ui:CardAction
                 Grid.Row="1"
                 Margin="5"
@@ -197,17 +181,35 @@
                 Grid.Column="1"
                 Margin="5"
                 Click="CardAction_Click"
-                Icon="Javascript24"
+                Icon="PlugConnected24"
                 Tag="Plugins">
                 <StackPanel>
                     <TextBlock
                         FontSize="13"
                         FontWeight="Medium"
-                        Text="JS插件" />
+                        Text="服务器插件" />
                     <TextBlock
                         FontSize="12"
                         Foreground="{DynamicResource TextFillColorTertiaryBrush}"
-                        Text="加载插件拓展功能" />
+                        Text="查看服务器插件" />
+                </StackPanel>
+            </ui:CardAction>
+            <ui:CardAction
+                Grid.Row="0"
+                Grid.Column="2"
+                Margin="5"
+                Click="CardAction_Click"
+                Icon="Settings24"
+                Tag="ServerSettings">
+                <StackPanel>
+                    <TextBlock
+                        FontSize="13"
+                        FontWeight="Medium"
+                        Text="设置" />
+                    <TextBlock
+                        FontSize="12"
+                        Foreground="{DynamicResource TextFillColorTertiaryBrush}"
+                        Text="修改服务器设置" />
                 </StackPanel>
             </ui:CardAction>
             <ui:CardAction
@@ -230,27 +232,12 @@
             </ui:CardAction>
             <ui:Anchor
                 Grid.Row="2"
+                Grid.Column="1"
                 Margin="10"
                 HorizontalAlignment="Center"
                 Content="查看官网页面"
                 Icon="Link24"
                 NavigateUri="https://serein.cc" />
-            <ui:Anchor
-                Grid.Row="2"
-                Grid.Column="1"
-                Margin="10"
-                HorizontalAlignment="Center"
-                Content="扩展市场"
-                Icon="Link24"
-                NavigateUri="https://market.serein.cc" />
-            <ui:Anchor
-                Grid.Row="2"
-                Grid.Column="2"
-                Margin="10"
-                HorizontalAlignment="Center"
-                Content="加入交流群"
-                Icon="Link24"
-                NavigateUri="https://jq.qq.com/?_wv=1027&amp;k=XNZqPSPv" />
         </Grid>
     </StackPanel>
 </ui:UiPage>
