Ver 0.6.0-A1: Add Setup page for server.properties

--- a/Serein/WPF/Windows/Pages/Server/Container.xaml
+++ b/Serein/WPF/Windows/Pages/Server/Container.xaml
@@ -40,6 +40,12 @@
                     Icon="ArrowDownload24"
                     PageTag="download"
                     PageType="{x:Type pages:Download}" />
+                <ui:NavigationItem
+    x:Name="MinecraftProperties"
+    Content="服务端下载"
+    Icon="Settings24"
+    PageTag="properties"
+    PageType="{x:Type pages:Properties}" />
             </ui:NavigationCompact.Items>
         </ui:NavigationCompact>
         <Border
