Ver 0.7.0-A1: Failed when trying to create Usage page.

--- a/Serein/WPF/Windows/Pages/Server/Container.xaml
+++ b/Serein/WPF/Windows/Pages/Server/Container.xaml
@@ -41,12 +41,19 @@
                     PageTag="download"
                     PageType="{x:Type pages:Download}" />
                 <ui:NavigationItem
-    x:Name="MinecraftProperties"
-    Content="服务端下载"
-    Icon="Settings24"
-    PageTag="properties"
-    PageType="{x:Type pages:Properties}" />
+                    x:Name="MinecraftProperties"
+                    Content="服务端下载"
+                    Icon="Settings24"
+                    PageTag="properties"
+                    PageType="{x:Type pages:Properties}" />
+                <ui:NavigationItem
+                    x:Name="Usage"
+                    Content="服务端占用"
+                    Icon="DataUsage24"
+                    PageTag="usage"
+                    PageType="{x:Type pages:Usage}" />
             </ui:NavigationCompact.Items>
+                
         </ui:NavigationCompact>
         <Border
             Grid.Column="1"
