--- a/Serein/WPF/Windows/Pages/Server/Properties.xaml
+++ b/Serein/WPF/Windows/Pages/Server/Properties.xaml
@@ -14,7 +14,7 @@
 
     <Grid>
         <DockPanel>
-            <GroupBox Header="MC设置">
+            <GroupBox Header="MC设置" Name="PropertiesPage">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
