--- a/Serein/WPF/Windows/Pages/Server/Download.xaml
+++ b/Serein/WPF/Windows/Pages/Server/Download.xaml
@@ -26,7 +26,7 @@
                 DockPanel.Dock="Top"
                 Header="服务端名"
                 MinWidth="200">
-                <ComboBox Name="ServerDownloadName" SelectedItem="" SelectionChanged="ServerDownloadName_SelectionChanged">
+                <ComboBox Name="ServerDownloadName" SelectedItem="" SelectionChanged="ServerDownloadName_SelectionChanged" >
 
                 </ComboBox>
             </GroupBox>
@@ -37,22 +37,35 @@ DockPanel.Dock="Top"
 Header="服务端版本"
     MinWidth="200">
 
-                <ComboBox Name="ServerDownloadVersion" SelectedItem="" SelectionChanged="ServerDownloadVersion_SelectionChanged">
+                <ComboBox Name="ServerDownloadVersion" SelectedItem="0" SelectionChanged="ServerDownloadVersion_SelectionChanged" IsEnabled="False">
 
                 </ComboBox>
 
             </GroupBox>
+            <GroupBox
+Margin="3"
+Padding="3"
+DockPanel.Dock="Top"
+Header="服务端详细版本"
+                Name="CoreVersion"
+                Visibility="Collapsed"
+    MinWidth="200">
 
+                <ComboBox Name="ServerDownloadCoreVersion" SelectedItem="0" SelectionChanged="ServerDownloadCoreVersion_SelectionChanged" IsEnabled="False">
+
+                </ComboBox>
+
+            </GroupBox>
             <ui:Button
     Margin="0,5"
     VerticalAlignment="Center"
     HorizontalAlignment="Center"
     MinWidth="180"
     DockPanel.Dock="Bottom"
-    IsEnabled="False"
 Click="ServerDownload"
                 Name="DownloadButton"
-    Content="开始下载"/>
+    Content="开始下载"
+                IsEnabled="False"/>
             <TextBlock VerticalAlignment="Bottom" Name="DownloadProgressText">下载进度： -</TextBlock>
             <ProgressBar Name="DownloadProgress" Height="20px" Margin="5" VerticalAlignment="Bottom"  Value="0"/>
             <CheckBox Name="AutoSetupPath" Margin="5" VerticalAlignment="Bottom" Content="将下载的核心设为默认" IsChecked="True"/>
